feat(footer): add footer with institution logos

--- a/_quarto.yml
+++ b/_quarto.yml
@@ -40,11 +40,19 @@ website:
         - pages/model_reviews.qmd
         - pages/llm_generate_des.qmd
         - pages/simtools.qmd
+  page-footer:
+    center: |
+      ![](images/exeter.png){width=150px}
+      ![](images/somerset.jpg){width=100px}&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+      ![](images/ukmrc.png){width=150px}&nbsp;&nbsp;&nbsp;
+      ![](images/nihr.png){width=200px}
 
 format:
   html:
     theme:
       - cosmo
       - css/theme.scss
+    css:
+      - css/footer.css
     lightbox: true
     title-block-banner: images/banner.png
